# web-ui-app

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  app.py  dev_master_checklist.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
deps_archive/: pyproject.bak  requirements-dev.txt  requirements-prod.txt
docs/: CONTRACT.md
docs/checklists/: 2025-07-20_data_app_checklist.md
docs/checklists/archive/: 2025-07-19_original_master.md
schemas/: csv_columns.json
src/: __init__.py  loader.py  logging_config.py  main.py  settings.py
tests/: test_loader.py
tests/data/: bad_missing_cols.csv  expected_loader_head.csv  raw_sample.csv
